; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_treeview.c_DestroyTreeView.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_treeview.c_DestroyTreeView.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pathBuffer = common dso_local global i64 0, align 8
@TVSIL_NORMAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DestroyTreeView(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @pathBuffer, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = call i32 (...) @GetProcessHeap()
  %8 = load i64, i64* @pathBuffer, align 8
  %9 = call i32 @HeapFree(i32 %7, i32 0, i64 %8)
  br label %10

10:                                               ; preds = %6, %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @TVSIL_NORMAL, align 4
  %13 = call i64 @TreeView_GetImageList(i32 %11, i32 %12)
  store i64 %13, i64* %3, align 8
  %14 = load i64, i64* %3, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %10
  %17 = load i64, i64* %3, align 8
  %18 = call i32 @ImageList_Destroy(i64 %17)
  br label %19

19:                                               ; preds = %16, %10
  ret void
}

declare dso_local i32 @HeapFree(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i64 @TreeView_GetImageList(i32, i32) #1

declare dso_local i32 @ImageList_Destroy(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
